apps/base/browser-chaperone/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 3400
      targetPort: 3400
  type: ClusterIP
