apps/base/browser-chaperone/browser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browser
spec:
  selector:
    app: browser
  ports:
    - port: 3500
      targetPort: 3500
  type: ClusterIP
